--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
   <div class="header">
     <ul class="left-links">
       <li><a href="google.com">About</a></li>
@@ -18,25 +19,35 @@
       <li><a href="google.com">Settings</a></li>
     </ul>
   </div>
+
   <div class="content">
-    <img src="./logo.png" alt="">
+    <div class="image-container">
+      <img src="./logo.png" alt="">
+    </div>
+
     <div class="input">
       <input type="text">
     </div>
+
     <div class="buttons">
       <button>Do the thing!</button>
       <button>Do the other thing!</button>
     </div>
   </div>
-  <div class="footer">
-    <ul class="left-links">
-      <li><a href="google.com">Advertising</a></li>
-      <li><a href="google.com">Business</a></li>
-    </ul>
-    <ul class="right-links">
-      <li><a href="google.com">Privacy</a></li>
-      <li><a href="google.com">Terms</a></li>
-    </ul>
+  
+  <div class="footer-container">
+    <div class="footer">
+      <ul class="left-links">
+        <li><a href="google.com">Advertising</a></li>
+        <li><a href="google.com">Business</a></li>
+      </ul>
+  
+      <ul class="right-links">
+        <li><a href="google.com">Privacy</a></li>
+        <li><a href="google.com">Terms</a></li>
+      </ul>
+  
+    </div>
   </div>
 </body>
 </html>
